# templates

./: CLAUDE.md  LICENSE  README.md  get-template.sh
.claude/skills/template-scaffolder/: SKILL.md  validate-template.sh
.claude/skills/template-scaffolder/scripts/: validate-template.sh
ai_docs/: guide.md
cli/uv-typer-command-handler/: .gitignore  AGENTS.md  CLAUDE.md  Makefile  prompt.md  pyproject.toml
cli/uv-typer-command-handler/.beads/: issues.jsonl
cli/uv-typer-command-handler/.claude/hooks/: type-check.sh
cli/uv-typer-command-handler/.claude/skills/bead-mail-orchestrate/: SKILL.md
cli/uv-typer-command-handler/docs/: CODEBASE_MAP.md
cli/uv-typer-command-handler/specs/: cli-template-prd.md
cli/uv-typer-command-handler/src/mycli/: config.py  exceptions.py  main.py
cli/uv-typer-command-handler/src/mycli/commands/: __init__.py  demo.py  users.py
cli/uv-typer-command-handler/src/mycli/domain/: __init__.py  models.py
cli/uv-typer-command-handler/src/mycli/handlers/: __init__.py  users.py
cli/uv-typer-command-handler/src/mycli/repository/: __init__.py  base.py  json.py
cli/uv-typer-command-handler/src/mycli/tui/: __init__.py  console.py
cli/uv-typer-command-handler/tests/: conftest.py
cli/uv-typer-command-handler/tests/integration/: test_cli.py
cli/uv-typer-command-handler/tests/unit/: test_exceptions.py  test_handlers.py  test_inmemory_repo.py  test_models.py  test_repository.py  test_repository_protocol.py  test_tui.py
