[project]
name = "mycli"
version = "0.1.0"
description = "A modern CLI template using uv"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "questionary>=2.0.0",
  "tomlkit>=0.12.0",
]

[project.scripts]
mycli = "mycli.main:run"

[build-system]
requires = ["uv_build>=0.10.3"]
build-backend = "uv_build"

[tool.uv]
dev-dependencies = ["pytest>=8.0", "ruff>=0.4.0", "ty"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
